--- a/sftp-action.Tests/sftp-action.Tests.csproj
+++ b/sftp-action.Tests/sftp-action.Tests.csproj
@@ -29,6 +29,9 @@
     <None Update="rsa.key">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="secrets.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
