refactor to run a list of commands

--- a/sftp-action.Tests/ssh-action.Tests.csproj
+++ b/sftp-action.Tests/ssh-action.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sftp-action\sftp-action.csproj" />
+    <ProjectReference Include="..\sftp-action\ssh-action.csproj" />
   </ItemGroup>
 
   <ItemGroup>
