--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-﻿name: Run .NET Core Deploy
+﻿name: .NET Core SSH Deploy
 author: rswilley
 description: Github Action to Deploy .NET Core
 inputs:
@@ -8,11 +8,8 @@ inputs:
   username:
     description: "Username for authentication"
     required: true
-  githubtoken:
-    description: "Github token for repo"
-    required: true
-  repo:
-    description: "Github repo"
+  commands:
+    description: "Commands to run via SSH"
     required: true
 runs:
   using: 'docker'
@@ -21,11 +18,8 @@ runs:
   - '-h'
   - ${{ inputs.host }}
   - '-u'
-  - ${{ inputs.username }}
-  - '-t'
-  - ${{ inputs.githubtoken }}
-  - '-r'
-  - ${{ inputs.repo }}
+  - ${{ inputs.commands }}
+  - '-c'
 branding:
   color: "purple"
   icon: "lock"
